feature/model selection

--- a/Other models.ipynb
+++ b/Other models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "with open('data/datasets.pkl', 'rb') as f:\n",
+    "with open('data/all_datasets.pkl', 'rb') as f:\n",
     "    d = pickle.load(f)\n",
     "    \n",
     "X_train = d[\"train\"][\"X\"]\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,61 +73,6 @@
     "#     weights = model.coef_\n",
     "    m = len(y)\n",
     "    return np.sum((pred - y)**2)/2./m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training: RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
-      "           max_features='auto', max_leaf_nodes=None,\n",
-      "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
-      "           min_samples_leaf=1, min_samples_split=2,\n",
-      "           min_weight_fraction_leaf=0.0, n_estimators=15, n_jobs=-1,\n",
-      "           oob_score=False, random_state=None, verbose=0, warm_start=False)\n",
-      "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
-      "           max_features='auto', max_leaf_nodes=None,\n",
-      "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
-      "           min_samples_leaf=1, min_samples_split=2,\n",
-      "           min_weight_fraction_leaf=0.0, n_estimators=15, n_jobs=-1,\n",
-      "           oob_score=False, random_state=None, verbose=0, warm_start=False)\n",
-      "Training cost: 42, validation cost: 212, test cost: 218\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "models = [RFR(bootstrap=True, criterion='mse', max_depth=None,\n",
-    "           max_features='auto', max_leaf_nodes=None,\n",
-    "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
-    "           min_samples_leaf=1, min_samples_split=2,\n",
-    "           min_weight_fraction_leaf=0.0, n_estimators=15, n_jobs=-1,\n",
-    "           oob_score=False, random_state=None, verbose=0, warm_start=False)]\n",
-    "\n",
-    "train_costs = []\n",
-    "validation_costs = []\n",
-    "test_costs = []\n",
-    "for clf in models:\n",
-    "    print (\"Training: \" + str(clf))\n",
-    "    clf.fit(X_train, y_train)\n",
-    "    \n",
-    "    train_cost = get_cost(clf, X_train, y_train)\n",
-    "    validation_cost = get_cost(clf, X_validation, y_validation)\n",
-    "    test_cost = get_cost(clf, X_test, y_test)\n",
-    "    \n",
-    "    train_costs.append(train_cost)\n",
-    "    validation_costs.append(validation_cost)\n",
-    "    test_costs.append(test_cost)\n",
-    "    \n",
-    "    print (clf)\n",
-    "    print (\"Training cost: %d, validation cost: %d, test cost: %d\\n\" %(train_cost, validation_cost, test_cost))"
    ]
   },
   {
@@ -257,17 +202,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1, loss = 271.06213029\n",
-      "Iteration 2, loss = 216.59963985\n",
-      "Iteration 3, loss = 194.16647129\n"
+      "Iteration 1, loss = 267.84653049\n",
+      "Iteration 2, loss = 215.45060510\n",
+      "Iteration 3, loss = 190.39446945\n",
+      "Iteration 4, loss = 179.45894184\n",
+      "Iteration 5, loss = 169.48593453\n",
+      "Iteration 6, loss = 161.78244944\n",
+      "Iteration 7, loss = 153.50120934\n",
+      "Iteration 8, loss = 147.14882051\n",
+      "Iteration 9, loss = 142.23568646\n",
+      "Iteration 10, loss = 136.16310831\n",
+      "Iteration 11, loss = 132.38794242\n",
+      "Iteration 12, loss = 129.53092326\n",
+      "Iteration 13, loss = 125.12564788\n",
+      "Iteration 14, loss = 121.37039286\n",
+      "Iteration 15, loss = 118.88091291\n",
+      "Iteration 16, loss = 116.46964703\n",
+      "Iteration 17, loss = 114.44646758\n",
+      "Iteration 18, loss = 111.77841365\n",
+      "Iteration 19, loss = 110.62974274\n",
+      "Iteration 20, loss = 108.65057096\n",
+      "Iteration 21, loss = 107.49889439\n",
+      "Iteration 22, loss = 104.57730606\n",
+      "Iteration 23, loss = 103.94213637\n",
+      "Iteration 24, loss = 101.94429969\n",
+      "Iteration 25, loss = 101.30267589\n",
+      "Iteration 26, loss = 100.30599671\n",
+      "Iteration 27, loss = 99.06072083\n",
+      "Iteration 28, loss = 97.78975249\n",
+      "Iteration 29, loss = 96.07345872\n",
+      "Iteration 30, loss = 95.76198492\n",
+      "Iteration 31, loss = 94.46080110\n",
+      "Iteration 32, loss = 93.96054050\n",
+      "Iteration 33, loss = 93.34963754\n",
+      "Iteration 34, loss = 91.90960779\n",
+      "Iteration 35, loss = 91.29822679\n",
+      "Iteration 36, loss = 90.49410238\n",
+      "Iteration 37, loss = 89.50952615\n",
+      "Iteration 38, loss = 88.49506253\n",
+      "Iteration 39, loss = 88.55453178\n",
+      "Iteration 40, loss = 87.00277434\n",
+      "Iteration 41, loss = 86.62815790\n",
+      "Iteration 42, loss = 86.39636645\n",
+      "Iteration 43, loss = 85.45359593\n",
+      "Iteration 44, loss = 84.41792541\n",
+      "Iteration 45, loss = 84.49580663\n",
+      "Iteration 46, loss = 84.69252788\n",
+      "Iteration 47, loss = 83.42533556\n",
+      "Iteration 48, loss = 82.78085990\n",
+      "Iteration 49, loss = 82.91479486\n",
+      "Iteration 50, loss = 81.60382327\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ted\\Anaconda2\\envs\\test\\lib\\site-packages\\sklearn\\neural_network\\multilayer_perceptron.py:566: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MLPRegressor(activation='relu', alpha=0.005, batch_size=200, beta_1=0.9,\n",
+       "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "       hidden_layer_sizes=[500, 300, 200, 50, 10],\n",
+       "       learning_rate='constant', learning_rate_init=0.0008, max_iter=200,\n",
+       "       momentum=0.9, nesterovs_momentum=True, power_t=0.5,\n",
+       "       random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
+       "       validation_fraction=0.1, verbose=5, warm_start=False)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -283,15 +299,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open(\"sklearn_NN.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(MPLR, f, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training cost: 79, validation cost: 194, test cost: 211\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "train_cost = get_cost(MPLR, X_train, y_train)\n",
     "validation_cost = get_cost(MPLR, X_validation, y_validation)\n",
     "test_cost = get_cost(MPLR, X_test, y_test)\n",
     "\n",
     "print (\"Training cost: %d, validation cost: %d, test cost: %d\\n\" %(train_cost, validation_cost, test_cost))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost(y, pred):\n",
+    "    m = len(y)\n",
+    "    return np.sum((y - pred)**2)/2./m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"results/inputs.pkl\", \"rb\") as f:\n",
+    "    X = pickle.load(f)\n",
+    "    \n"
    ]
   }
  ],
